// Copyright 2020-2021 The FuseQuery Authors.
//
// Code is licensed under Apache License, Version 2.0.

syntax = "proto3";

package queryflight;

message FlightRequest {
  string action = 1;
}

// do_action request.
message FlightActionRequest {
  string body = 1;
}

// Fetch partition request.
message FetchPartitionRequest {
  string uuid = 1;
  uint32 nums = 2;
}
